--- a/package.json
+++ b/package.json
@@ -43,5 +43,7 @@
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"python-shell": "^2.0.1"
+	}
 }
